@@ -5,6 +5,7 @@
 = GENI Portal Release Notes =
 
 == 2.11 ==
+ * Explicitly use the inside cert/key when launching Flack (#982)
 
 == 2.10.1 ==
  * Fix tool-omniconfigure for downloading just your Omni config
